# SomeBuildSystem

./: .flake8  .gitignore  Pipfile  check.bat  pyproject.toml  pytest.ini
src/build_task_manager/: app.py  builds.py  dependency_cycle_finder.py  tasks.py
src/build_task_manager/tasks/: reading.py  task_storage.py
tests/: conftest.py  test_list_builds_command.py  test_list_command.py  test_list_tasks_command.py
tests/builds/: test_get_build_command.py  test_list_builds_command.py
tests/data/builds/: build_with_cycle.yaml  build_with_cycle_2.yaml  build_with_missing_dependency.yaml
tests/data/builds/invalid_schema/: build_without_name.yaml
tests/data/tasks/: build_with_cycle_2_tasks.yaml  build_with_cycle_tasks.yaml  build_with_missing_dependency_tasks.yaml  missing_tasks.yaml  multiple_definitions_for_task.yaml  valid_tasks.yaml
tests/data/tasks/invalid/: task_missing_dependencies.yaml  task_without_name.yaml  unexpected_task_field.yaml
tests/tasks/: test_get_task_command.py  test_list_tasks_command.py  test_validate_tasks_command.py
